amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/conflicting-extensions-union.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/conflicting-extensions-union.api.graphql
Profile: GraphQL
Conforms: true
Number of results: 0
